k3s/infrastructure/configs/backstage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: backstage.joshgeissler.com
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: backstage.joshgeissler.com
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: backstage
                port:
                  number: 7007
  tls:
    - hosts:
        - backstage.joshgeissler.com
      secretName: backstage-ingress
